Detect unavailability of font resources

font_service::FontLoader makes a sync mojom call when attempting to load fonts.

It is possible for this call to fail if the remote service manager shuts down
before the call completes.

This leaves the calling service in a bad state, where the mojom error has yet
to be received, and where there are no font resources.

In tests this has been exhibited by crashes in some services while they
attempted to perform AuraInit. This change updates PlatformFont to provide a way
to initialize the the static defaults, which returns the success state.

AuraInit is updated to consider the lack of font as a failed init. Calling
services are already set to shutdown on these failures. Allowing us to cleanly
handle this shutdown ordering issue.

TEST=mash_browser_tests
Bug: 738441
Change-Id: I90efe768d5027885d51bc4ac8ba1de895c297f54