ui/gfx/platform_font_linux.h
@@ -25,6 +25,8 @@ class GFX_EXPORT PlatformFontLinux : public PlatformFont {
   PlatformFontLinux();
   PlatformFontLinux(const std::string& font_name, int font_size_pixels);
 
+  static bool InitDefaultFont();
+
   // Resets and reloads the cached system font used by the default constructor.
   // This function is useful when the system font has changed, for example, when
   // the locale has changed.
